# OpTrade

./: .gitignore  .readthedocs.yml  DATA.md  FEATURES.md  LICENSE  README.md  pyproject.toml  setup.py
data/thetadata/: historical.py
docs/: api.rst  build.py  build_docs.py  build_docs.sh  conf.py  contributing.rst  index.rst  installation.rst  make_templates_dir.py  modules.rst  old_conf.py  optrade.analysis.rst  optrade.data.rst  optrade.exp.rst  optrade.pytorch.models.rst  optrade.pytorch.rst  optrade.pytorch.utils.rst  optrade.rst  optrade.torch.models.rst  optrade.torch.rst  optrade.torch.utils.rst  optrade.utils.rst  requirements.txt  usage.rst
docs/_build/doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_ext/: module_tree.py
docs/_static/: custom.css
docs/_templates/: class.rst  module.rst
docs/examples/: forecasting_torch.py  multi_contract.py  single_contract.py  universe.py
optrade/: main.py
optrade/analysis/: factors.py  plotting.py  visualizer.py
optrade/config/: config.py
optrade/data/: __init__.py  contracts.py  features.py  forecasting.py  thetadata.py  universe.py
optrade/data/features/: __init__.py  datetime_features.py  get_features.py  implied_volatility.py  tte_features.py
optrade/dev/: download_universe.py  grid_search.py  run.py
optrade/exp/: __init__.py  evaluate.py  evaluation.py  exp.py  forecasting.py  single_exp.py
optrade/utils/: directories.py  error_handlers.py  market_metrics.py  misc.py  stock_categories.py  train.py  volatility.py
(+151 files in other folders)
