[tool.poetry]
name = "optrade"
version = "0.0.6"
description = "Options Forecasting and Trading Framework for Quantitative Research"
authors = ["Xavier Mootoo"]
license = "MIT"
readme = "README.md"
packages = [{ include = "optrade" }]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "*.egg",
    "optrade/data/historical_data/",
    "optrade/data/temp/",
    "__pycache__/",
    ".ropeproject/",
    "test.py",
    "figures/",
    "**/logs/",
    ".neptune/",
    "docs/",
    "optrade_venv/",
    "**/.DS_Store",
]


[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "<=2.2.3"
pandas = "^2.2.3"
httpx = "^0.28.1"
rich = "^13.9.4"
pydantic = "^2.10.6"
PyYAML = "^6.0"
neptune = "1.13.0"
matplotlib = "3.10.0"
yfinance = "^0.2.54"
pandas-market-calendars = "^4.6.1"
scikit-learn = "^1.6.1"
torch = "^2.6.0"
pandas-datareader = "^0.10.0"
statsmodels = "^0.14.4"
mambapy = "^1.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[tool.mypy]
files = ["optrade"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
